Revert "Fix promo structure on mobile"
This reverts commit 3cde228cdcb0226576d27972582189e87cf7c36c.

Conflicts:
	app/assets/stylesheets/layout/page_specific/_homepage.scss

--- a/app/assets/stylesheets/components/page_specific/_promo.scss
+++ b/app/assets/stylesheets/components/page_specific/_promo.scss
@@ -10,8 +10,6 @@
 .promo__heading {
   @extend %font-heading-medium;
   @include body(24, 30);
-  display: block;
-  margin-bottom: $baseline-unit;
   margin-top: 0;
 
   .theme-cy & {
@@ -19,9 +17,4 @@
       @include body(18, 24);
     }
   }
-}
-
-.promo__content,
-.promo__heading {
-  @include column(12);
 }
